# leptos-spin-wasm

./: .gitignore  .windsurfrules  Cargo.toml  README.md  flake.nix  spin.toml  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json  spin.txt
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4pryn63irvf1cqrnh81fm768hp8c098d-source  awbcf7q17f12j3259ysdkpwfiadhssir-source  lmnghihyrdn3sisn9nvk7rlmhmq4i52p-source
.github/workflows/: fh.yml  flake-checker.yml  flakehub-publish-tagged.yml  lock-updater.yml
content/posts/: dummy.md
src/: app.rs  lib.rs  markdown_renderer.rs  server.rs
src/components/: button.rs
src/components/ui/: mod.rs
src/pages/: mod.rs  styleguide.rs
style/: tailwind.css
