[package]
name = "my-leptos-app"
authors = ["J <2742259+javdl@users.noreply.github.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.7.0" }
leptos_meta = { version = "0.7.0" }
leptos_router = { version = "0.7.0" }
leptos_wasi = { version = "0.1.3", optional = true }
spin-sdk = { version = "3.0.0", optional = true }
# `wasi` needs to be locked for compatibility with Spin
wasi = { version = "=0.13.2", optional = true }
wasm-bindgen = { version = "0.2.96", optional = true }

[workspace]

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate", "dep:wasm-bindgen"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/spin",
  "dep:spin-sdk",
  "dep:leptos_wasi",
  "dep:wasi",
]

[package.metadata.leptos]
output-name = "my_leptos_app"
style-file = "style/main.scss"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
